Fix cursor on Firefox

--- a/src/style.css
+++ b/src/style.css
@@ -145,31 +145,29 @@ h2 {
   display: block;
   position: absolute;
   z-index: 2;
-  width:  2px;
+  width:  16px;
   height: 16px;
+  box-sizing: border-box;
   margin-top:  -8px;
-  margin-left: -1px;
-  background-color: #000;
-  outline: 1px solid #fff;
+  margin-left: -8px;
   pointer-events: none;
-}
-.cursor:after {
-  content: '';
-  display: block;
-  width: 16px;
-  height: 2px;
-  margin-left: -7px;
-  margin-top: 7px;
-  background-color: #000;
-  outline: 1px solid #fff;
-  pointer-events: none;
+  background: no-repeat center / contain url('data:image/svg+xml,\
+    <svg viewBox="0 0 16 16"\
+      xmlns="http://www.w3.org/2000/svg">\
+      <path\
+        stroke="white"\
+        stroke-width="1.5"\
+        d="M10,1 V6 H15 V10 H10 V15 H6 V10 H1 V6 H6 V1 Z"\
+      />\
+    </svg>\
+  ');
 }
 .cursor.insert-mode {
   width:  64px;
   height: 32px;
   margin-left: 0;
   margin-top:  0;
-  background-color: transparent;
+  background: transparent;
   outline: 1px solid #000;
   border:  1px solid #fff;
 }
